--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=El+Messiri&display=swap" rel="stylesheet">
     <title>GrayStone</title>
 </head>
 <body>
@@ -21,9 +24,10 @@
    </section>
 
    <section class="paragraphs">
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum. Orci sagittis eu volutpat odio facilisis mauris sit amet massa. Sit amet risus nullam eget felis eget nunc lobortis mattis. Vitae congue mauris rhoncus aenean vel elit scelerisque. Convallis aenean et tortor at risus viverra adipiscing at. Pretium fusce id velit ut tortor pretium viverra suspendisse. At elementum eu facilisis sed. Euismod elementum nisi quis eleifend. Turpis massa tincidunt dui ut ornare lectus sit amet est. Nisl rhoncus mattis rhoncus urna neque viverra justo nec ultrices. <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum. Orci sagittis eu volutpat odio facilisis mauris sit amet massa. Sit amet risus nullam eget felis eget nunc lobortis mattis. Vitae congue mauris rhoncus aenean vel elit scelerisque. Convallis aenean et tortor at risus viverra adipiscing at. Pretium fusce id velit ut tortor pretium viverra suspendisse. At elementum eu facilisis sed. Euismod elementum nisi quis eleifend. Turpis massa tincidunt dui ut ornare lectus sit amet est. Nisl rhoncus mattis rhoncus urna neque viverra justo nec ultrices. <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum. Orci sagittis eu volutpat odio facilisis mauris sit amet massa. Sit amet risus nullam eget felis eget nunc lobortis mattis. Vitae congue mauris rhoncus aenean vel elit scelerisque. Convallis aenean et tortor at risus viverra adipiscing at. Pretium fusce id velit ut tortor pretium viverra suspendisse. At elementum eu facilisis sed. Euismod elementum nisi quis eleifend. Turpis massa tincidunt dui ut ornare lectus sit amet est. Nisl rhoncus mattis rhoncus urna neque viverra justo nec ultrices.
-</p>
+<div class="AboutBox1">
+    <h1 class="AboutGrayStone">About Graystone</h1>
+    <p class="AboutParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Cursus risus at ultrices mi tempus. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus. Urna porttitor rhoncus dolor purus non enim. Penatibus et magnis dis parturient montes nascetur ridiculus. Felis imperdiet proin fermentum leo vel orci porta non. Scelerisque varius morbi enim nunc faucibus a pellentesque sit amet</p>
+</div>
    </section>
 </body>
 </html>
