--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>GrayStone</title>
 </head>
 <body>
-    <header>
+    <header class="headerbg">
         <nav class="navigation">
-            <a href="#">Locations</a>
+            <a href="#locationslink">Locations</a>
+            <a href="#paragraphslink">About</a>
             <a href="#">Contact</a>
-            <a href="#">About</a>
         </nav>
     </header>
 
@@ -23,11 +23,48 @@
     <h2 id="text">GrayStone</h2>
    </section>
 
-   <section class="paragraphs">
+   <section class="paragraphs" id="paragraphslink">
 <div class="AboutBox1">
     <h1 class="AboutGrayStone">About Graystone</h1>
     <p class="AboutParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Cursus risus at ultrices mi tempus. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus. Urna porttitor rhoncus dolor purus non enim. Penatibus et magnis dis parturient montes nascetur ridiculus. Felis imperdiet proin fermentum leo vel orci porta non. Scelerisque varius morbi enim nunc faucibus a pellentesque sit amet</p>
 </div>
+   </section>
+
+   <section class="locations" id="locationslink">
+    <div class="locationtext">
+        <h1>Locations</h1>
+    </div>
+
+    <div class="wrapper1">
+        <img src="./images/spainhouse.webp" class="house1img">
+        <div class="text-box">
+            <h1>Benahavís, Andalusia, Spain</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla quibusdam assumenda facilis est, fugit exercitationem eum aliquam quidem, provident corporis. Iusto ut esse architecto iste error at iure quae.</p>
+        </div>
+    </div>
+
+    <div class="wrapper2">
+        <img src="./images/house2.jpeg" class="house2img">
+        <div class="text-box">
+            <h1>Stockholm, Sweden</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, accusamus beatae? Voluptatum inventore aliquid quis accusamus, libero nam consectetur cum unde quam harum atque id soluta iste asperiores exercitationem molestiae!</p>
+        </div>
+    </div>
+
+
+    <div class="wrapper3">
+        <img src="./images/house3.jpeg" class="house3img">
+        <div class="text-box">
+            <h1>Seattle, Washington</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae architecto velit esse natus, accusantium est magnam fugiat reprehenderit modi neque id, libero dolorem minus praesentium delectus fugit earum, quasi maxime?</p>
+        </div>
+
+    </div>
+
+
+
+
+
    </section>
 </body>
 </html>
