--- a/index.html
+++ b/index.html
@@ -36,34 +36,30 @@
     </div>
 
     <div class="wrapper1">
-        <img src="./images/spainhouse.webp" class="house1img">
+        <img src="./images/house5.jpeg" class="house1img">
         <div class="text-box">
-            <h1>Benahavís, Andalusia, Spain</h1>
+            <h1>Marbella, Andalusia, Spain</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla quibusdam assumenda facilis est, fugit exercitationem eum aliquam quidem, provident corporis. Iusto ut esse architecto iste error at iure quae.</p>
         </div>
     </div>
 
     <div class="wrapper2">
-        <img src="./images/house2.jpeg" class="house2img">
+        <img src="./images/coloradoimg.webp" class="house2img">
         <div class="text-box">
-            <h1>Stockholm, Sweden</h1>
+            <h1>Mountain Village, Colorado, United States</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, accusamus beatae? Voluptatum inventore aliquid quis accusamus, libero nam consectetur cum unde quam harum atque id soluta iste asperiores exercitationem molestiae!</p>
         </div>
     </div>
 
 
     <div class="wrapper3">
-        <img src="./images/house3.jpeg" class="house3img">
+        <img src="./images/spainimg.webp" class="house3img">
         <div class="text-box">
-            <h1>Seattle, Washington</h1>
+            <h1>Marbella, Andalusia, Spain</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae architecto velit esse natus, accusantium est magnam fugiat reprehenderit modi neque id, libero dolorem minus praesentium delectus fugit earum, quasi maxime?</p>
         </div>
 
     </div>
-
-
-
-
 
    </section>
 </body>
